--- a/Livrable 2/EasySaveApp/App.xaml
+++ b/Livrable 2/EasySaveApp/App.xaml
@@ -15,6 +15,10 @@
             <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
                 <view:HomeView/>
             </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:ChangeViewModelTest}">
+                <view:ChangeViewTest/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application> 
