--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -50,14 +50,14 @@
                              FontSize="20"
                              Style="{StaticResource MenuButtonTheme}"
                              IsChecked="True"
-                             Command="{Binding HomeViewCommand}"/>
+                             Command="{Binding SaveHomeViewModelCommand}"/>
 
                 <RadioButton Content="Save"
                              Height="50"
                              Foreground="White"
                              FontSize="20"
                              Style="{StaticResource MenuButtonTheme}"
-                             Command="{Binding ChangeViewCommand}"/>
+                             Command="{Binding SaveViewModelCommand}"/>
 
                 <RadioButton Content="Recovery"
                              Height="50"
@@ -69,7 +69,7 @@
             </StackPanel>
             
             <!-- Search bar -->
-            <TextBox Width="300"
+            <TextBox Width="200"
                      Height="40"
                      VerticalContentAlignment="Center"
                      HorizontalAlignment="Left"
