--- a/MVVM/View/SettingView.xaml
+++ b/MVVM/View/SettingView.xaml
@@ -1,12 +1,11 @@
-﻿<UserControl x:Class="EasySaveApp.MVVM.View.ChangeViewTest"
+﻿<UserControl x:Class="EasySaveApp.MVVM.View.SettingView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:EasySaveApp.MVVM.View"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
-             Background="#CB4335">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
             
     </Grid>
