--- a/MVVM/View/SaveView.xaml
+++ b/MVVM/View/SaveView.xaml
@@ -8,19 +8,21 @@
              d:DesignHeight="450" d:DesignWidth="800">
 
     <StackPanel>
-        <!-- Title -->
+        <!-- Title Text -->
         <TextBlock Text="Create a BackUp"
                        Foreground="AliceBlue"
                        FontSize="28"
                        HorizontalAlignment="Left"
                        Margin="20 10 0 0"/>
-        <!-- Name -->
+        
+        <!-- Name Text -->
         <TextBlock Text="Name"
                        Foreground="AliceBlue"
                        FontSize="14"
                        HorizontalAlignment="Left"
                        Margin="20 10 0 0"/>
 
+        <!-- Name Input -->
         <StackPanel Orientation="Horizontal">
             <TextBox Width="500"
                      Height="40"
@@ -30,14 +32,15 @@
                      Style="{StaticResource ModernTextBox}"
                      x:Name="saveName"/>
         </StackPanel>
-        
-        <!-- Source -->
+
+        <!-- Source Text -->
         <TextBlock Text="Source"
                        Foreground="AliceBlue"
                        FontSize="14"
                        HorizontalAlignment="Left"
                        Margin="20 10 0 0"/>
 
+        <!-- Source Input -->
         <StackPanel Orientation="Horizontal">
             <TextBox Width="500"
                      Height="40"
@@ -81,13 +84,14 @@
             </Button>
         </StackPanel>
 
-        <!-- Destination -->
+        <!-- Destination Text -->
         <TextBlock Text="Destination"
                        Foreground="AliceBlue"
                        FontSize="14"
                        HorizontalAlignment="Left"
                        Margin="20 10 0 0"/>
 
+        <!-- Destination Input -->
         <StackPanel Orientation="Horizontal">
             <TextBox Width="500"
                      Height="40"
@@ -130,21 +134,85 @@
             </Button>
         </StackPanel>
         
-        <!-- Type of BackUp -->
+        <!-- Type of Backup Text-->
         <TextBlock Text="Type of BackUp"
                        Foreground="AliceBlue"
                        FontSize="14"
                        HorizontalAlignment="Left"
                        Margin="20 10 0 0"/>
 
-        <ComboBox Width="500"
-                  Height="20"
-                  HorizontalAlignment="Left"
-                  Margin="20"
-                  Background="#353340"
-                  Foreground="#353340"/>
-        
+        <!-- Type of Backup Button -->
+        <StackPanel Orientation="Horizontal" Margin="10,10,10,10">
+            <RadioButton Content="Complete"
+                    Foreground="AliceBlue"
+                    FontSize="14"
+                    FontWeight="Medium"
+                    Margin="20,0,0,0" 
+                    HorizontalAlignment="Right"
+                    IsChecked="True">
+                <!-- Command="{Binding SaveHomeViewModelCommand}"/> -->
+                <RadioButton.Style>
+                    <Style TargetType="RadioButton">
+                        <Setter Property="Background" Value="#353340"/>
+                        <Setter Property="Cursor" Value="Hand"/>
 
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FF4C70"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </RadioButton.Style>
+
+                <RadioButton.Template>
+                    <ControlTemplate TargetType="RadioButton">
+                        <Border Width="100"
+                                Height="40"
+                                CornerRadius="10"
+                                Background="{TemplateBinding Background}">
+                            <ContentPresenter VerticalAlignment="Center"
+                                              HorizontalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </RadioButton.Template>
+            </RadioButton>
+            
+            <RadioButton Content="Differential"
+                    Foreground="AliceBlue"
+                    FontSize="14"
+                    FontWeight="Medium"
+                    Margin="20,0,0,0" 
+                    HorizontalAlignment="Right"
+                    IsChecked="False">
+
+                <RadioButton.Style>
+                    <Style TargetType="RadioButton">
+                        <Setter Property="Background" Value="#353340"/>
+                        <Setter Property="Cursor" Value="Hand"/>
+
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FF4C70"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </RadioButton.Style>
+
+                <RadioButton.Template>
+                    <ControlTemplate TargetType="RadioButton">
+                        <Border Width="100"
+                                Height="40"
+                                CornerRadius="10"
+                                Background="{TemplateBinding Background}">
+                            <ContentPresenter VerticalAlignment="Center"
+                                              HorizontalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </RadioButton.Template>
+            </RadioButton>
+        </StackPanel>
+
+        <!-- Next Button -->
         <Button Content="Next"
                     Foreground="AliceBlue"
                     FontSize="14"
