--- a/MVVM/View/SaveView.xaml
+++ b/MVVM/View/SaveView.xaml
@@ -149,32 +149,10 @@
                     FontWeight="Medium"
                     Margin="20,0,0,0" 
                     HorizontalAlignment="Right"
-                    IsChecked="True">
+                    IsChecked="True"
+                    Style="{Binding CheckButtonTheme}">
                 <!-- Command="{Binding SaveHomeViewModelCommand}"/> -->
-                <RadioButton.Style>
-                    <Style TargetType="RadioButton">
-                        <Setter Property="Background" Value="#353340"/>
-                        <Setter Property="Cursor" Value="Hand"/>
 
-                        <Style.Triggers>
-                            <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#FF4C70"/>
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </RadioButton.Style>
-
-                <RadioButton.Template>
-                    <ControlTemplate TargetType="RadioButton">
-                        <Border Width="100"
-                                Height="40"
-                                CornerRadius="10"
-                                Background="{TemplateBinding Background}">
-                            <ContentPresenter VerticalAlignment="Center"
-                                              HorizontalAlignment="Center"/>
-                        </Border>
-                    </ControlTemplate>
-                </RadioButton.Template>
             </RadioButton>
             
             <RadioButton Content="Differential"
