--- a/App.xaml
+++ b/App.xaml
@@ -25,6 +25,9 @@
             <DataTemplate DataType="{x:Type viewModel:SettingViewModel}">
                 <view:SettingView/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModel:LogViewModel}">
+                <view:LogView/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application> 
