--- a/Theme/TextboxTheme.xaml
+++ b/Theme/TextboxTheme.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="{x:Type TextBox}"
-           x:Key="ModernTextBox">
+    <Style TargetType="{x:Type TextBox}" x:Key="ModernTextBox">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
@@ -19,7 +18,6 @@
                                      VerticalContentAlignment="Center"
                                      Padding="5"
                                      Foreground="#CFCFCF"
-                                     x:Name="SearchBox"
                                      FontSize="14"/>
 
                             <TextBlock IsHitTestVisible="False"
