--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -59,7 +59,7 @@
                              Style="{StaticResource MenuButtonTheme}"
                              Command="{Binding SaveViewModelCommand}"/>
 
-                <RadioButton Content="Recovery"
+                <RadioButton Content="Settings"
                              Height="50"
                              Foreground="White"
                              FontSize="20"
@@ -67,15 +67,6 @@
                              Checked="RadioButton_Checked"/>
 
             </StackPanel>
-            
-            <!-- Search bar -->
-            <TextBox Width="200"
-                     Height="40"
-                     VerticalContentAlignment="Center"
-                     HorizontalAlignment="Left"
-                     Margin="10"
-                     Grid.Column="1"
-                     Style="{StaticResource ModernTextBox}"/>
 
             <!-- X Button -->
             <Button Content="×"
