--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,10 +7,7 @@
         xmlns:local="clr-namespace:EasySaveApp"
         mc:Ignorable="d"
         Height="600" Width="920"
-        WindowStyle="None"
-        ResizeMode="NoResize"
-        Background="Transparent"
-        AllowsTransparency="True">
+        Background="Transparent">
 
     <Window.DataContext>
         <viewModel:MainViewModel/>
