--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -60,8 +60,7 @@
                              Height="50"
                              Foreground="White"
                              FontSize="20"
-                             Style="{StaticResource MenuButtonTheme}"
-                             Checked="RadioButton_Checked"/>
+                             Style="{StaticResource MenuButtonTheme}"/>
 
             </StackPanel>
 
