--- a/MVVM/View/SettingView.xaml
+++ b/MVVM/View/SettingView.xaml
@@ -6,7 +6,46 @@
              xmlns:local="clr-namespace:EasySaveApp.MVVM.View"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
-    </Grid>
+
+    <Border Margin="30">
+        <Grid>
+            <StackPanel>
+                <StackPanel>
+                    <TextBlock Text="Choose a language"
+                               FontSize="20"
+                               Foreground="AliceBlue"
+                               Margin="10"/>
+                    <ComboBox x:Name="Language"
+                              Width="200"
+                              Height="30"
+                              Margin="10"
+                              SelectedItem="{Binding SelectedLanguage, Mode=TwoWay}"    
+                              >
+                        <ComboBoxItem Content="English"/>
+                        <ComboBoxItem Content="French"/>
+                    </ComboBox>
+
+                </StackPanel>
+                <StackPanel>
+                    <TextBlock Text="Choose a type of log"
+                               FontSize="20"
+                               Foreground="AliceBlue"
+                               Margin="10"/>
+                    <ComboBox x:Name="extension"
+                              Width="200"
+                              Height="30"
+                              Margin="10"
+                              SelectedItem="{Binding SelectedExtension, Mode=TwoWay}">
+                        <ComboBoxItem Content="json"/>
+                        <ComboBoxItem Content="xml"/>
+                    </ComboBox>
+                </StackPanel>
+                <Button Content="Save" 
+                        Height="36" 
+                        Width="132" 
+                        Command="{Binding SaveSetting}"/>
+
+            </StackPanel>
+        </Grid>
+    </Border>
 </UserControl>
