--- a/MVVM/View/SaveView.xaml
+++ b/MVVM/View/SaveView.xaml
@@ -30,8 +30,8 @@
                      VerticalContentAlignment="Center"
                      HorizontalAlignment="Left"
                      Text="{Binding FileName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                     Margin="10"/>
-            <!-- Style="{StaticResource ModernTextBox}"-->
+                     Margin="10"
+            Style="{StaticResource ModernTextBox}" />
         </StackPanel>
 
         <!-- Source Text -->
@@ -49,7 +49,8 @@
                      VerticalContentAlignment="Center"
                      HorizontalAlignment="Left"
                      Margin="10" 
-                     Text="{Binding FileSource, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+                     Text="{Binding FileSource, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
+                      Style="{StaticResource ModernTextBox}" />
 
             <Button Content="Browse"
                     x:Name="Browse"
@@ -58,16 +59,16 @@
                     FontWeight="Medium"
                     Command="{Binding BrowseSourceCommand}" >
                 <Button.Style>
-                <Style TargetType="Button">
-                    <Setter Property="Background" Value="#353340"/>
-                    <Setter Property="Cursor" Value="Hand"/>
+                    <Style TargetType="Button">
+                        <Setter Property="Background" Value="#353340"/>
+                        <Setter Property="Cursor" Value="Hand"/>
 
-                    <Style.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#FF4C70"/>
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FF4C70"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
                 </Button.Style>
 
                 <Button.Template>
@@ -99,9 +100,8 @@
                      VerticalContentAlignment="Center"
                      HorizontalAlignment="Left"
                      Text="{Binding FileDestination, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"
-                     Margin="10"/>
-            <!-- Style="{StaticResource ModernTextBox}"-->
-
+                     Margin="10"
+                      Style="{StaticResource ModernTextBox}" />
 
             <Button Content="Browse"
                     Foreground="AliceBlue"
