--- a/App.xaml
+++ b/App.xaml
@@ -12,8 +12,8 @@
                 <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"/>
                 <ResourceDictionary Source="Theme/TextboxTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
-            <DataTemplate DataType="{x:Type viewModel:SaveHomeViewModel}">
-                <view:SaveHomeView/>
+            <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
+                <view:HomeView/>
             </DataTemplate>
             <DataTemplate DataType="{x:Type viewModel:SaveViewModel}">
                 <view:SaveView/>
