--- a/App.xaml
+++ b/App.xaml
@@ -21,6 +21,9 @@
             <DataTemplate DataType="{x:Type viewModel:SettingViewModel}">
                 <view:SettingView/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewModel:ProgressionViewModel}">
+                <view:ProgressionView/>
+            </DataTemplate>
         </ResourceDictionary>
     </Application.Resources>
 </Application> 
