--- a/MVVM/View/SaveHomeView.xaml
+++ b/MVVM/View/SaveHomeView.xaml
@@ -2,9 +2,14 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:viewModel="clr-namespace:EasySaveApp.MVVM.ViewModel"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.DataContext>
+        <viewModel:MainViewModel/>
+    </UserControl.DataContext>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -26,21 +31,23 @@
             <TextBlock FontSize="50"
                        Foreground="AliceBlue"
                        FontWeight="Medium"
-                       Width="286" Height="134" TextWrapping="WrapWithOverflow" Margin="50,0,0,0"><Run Text="Welcome to"/><LineBreak/><Run Text=" EasySave"/></TextBlock>
+                       Width="286" Height="134" 
+                       TextWrapping="WrapWithOverflow" 
+                       Margin="50,0,0,0"><Run Text="Welcome to"/><LineBreak/><Run Text=" EasySave"/></TextBlock>
         </StackPanel>
 
         <StackPanel Grid.Row="1"
                     VerticalAlignment="Center"
                     Margin="30 0 0 0">
             <!-- Slogan -->
-            <TextBlock Text="Easiest backup application"
+            <TextBlock Text="{Binding CurrentLanguage.Slogan}"
                        FontSize="30"
                        Foreground="AliceBlue"
                        FontWeight="Medium"
                        VerticalAlignment="Center"/>
 
             <!-- Lorum Ispum -->
-            <TextBlock Text="Welcome to EasySave, the easiest to use backup application. To save data, simply go to the Save section, fill in the different boxes and select Save. If you have any problems, please contact us at easysupport@lahyra.com"
+            <TextBlock Text="{Binding CurrentLanguage.Description}"
                        FontSize="15"
                        Foreground="AliceBlue"
                        FontWeight="Medium"
