--- a/Theme/RadioButtonTheme.xaml
+++ b/Theme/RadioButtonTheme.xaml
@@ -1,9 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
+    <!-- RadioButton Theme -->
+
     <Style BasedOn="{StaticResource {x:Type ToggleButton}}"
            TargetType="{x:Type RadioButton}"
-           x:Key="MenuButtonTheme">
+           x:Key="LanguageButtonTheme">
 
         <Style.Setters>
             <Setter Property="Template">
@@ -11,10 +13,11 @@
                     <ControlTemplate TargetType="RadioButton">
                         <Grid VerticalAlignment="Stretch"
                               HorizontalAlignment="Stretch"
+                              Width="100"
                               Background="{TemplateBinding Background}">
                             <TextBlock Text="{TemplateBinding Property=Content}"
                                        VerticalAlignment="Center"
-                                       Margin="35 0 0 0"/>
+                                       HorizontalAlignment="Center"/>
 
                         </Grid>
                     </ControlTemplate>
@@ -28,8 +31,9 @@
 
         <Style.Triggers>
             <Trigger Property="IsChecked" Value="True">
-                <Setter Property="Background" Value="#22202f"/>
+                <Setter Property="Background" Value="#FF4C70"/>
             </Trigger>
         </Style.Triggers>
     </Style>
+
 </ResourceDictionary>
